// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/api/files/:uuid request succeeds on instrument file 1`] = `
{
  "checksum": "298688b011a511f8f0e9353371cf73ee86f60c89b0e02c6931d8c05542c64cdb",
  "createdAt": "2020-02-20T10:56:19.382Z",
  "downloadUrl": "http://localhost:3000/api/download/product/38092c00-161d-4ca2-a29d-628cf8e960f6/20181115_mace-head_mira.nc",
  "dvasId": null,
  "dvasUpdatedAt": null,
  "errorLevel": null,
  "filename": "20181115_mace-head_mira.nc",
  "format": "HDF5 (NetCDF4)",
  "instrument": {
    "allowedTags": [],
    "humanReadableName": "METEK MIRA-35 cloud radar",
    "id": "mira",
    "shortName": "MIRA",
    "type": "radar",
  },
  "instrumentInfo": {
    "model": "MIRA",
    "name": "Bucharest MIRA",
    "owners": [
      "University of Bucharest",
    ],
    "pid": "https://hdl.handle.net/123/bucharest-mira",
    "serialNumber": null,
    "type": "cloud radar",
    "uuid": "0b3a7fa0-4812-4964-af23-1162e8b3a665",
  },
  "instrumentPid": "https://hdl.handle.net/123/bucharest-mira",
  "legacy": false,
  "measurementDate": "2018-11-15",
  "pid": "",
  "product": {
    "experimental": false,
    "humanReadableName": "Radar",
    "id": "radar",
    "level": "1b",
  },
  "site": {
    "actrisId": null,
    "altitude": 16,
    "country": "Ireland",
    "countryCode": "IE",
    "countrySubdivisionCode": null,
    "dvasId": null,
    "gaw": "MHD",
    "humanReadableName": "Mace Head",
    "id": "mace-head",
    "latitude": 53.326,
    "longitude": -9.9,
    "type": [
      "cloudnet",
    ],
  },
  "size": "12200657",
  "software": [
    {
      "id": "cloudnetpy",
      "title": "CloudnetPy 1.0.4",
      "url": null,
      "version": "1.0.4",
    },
  ],
  "sourceFileIds": [],
  "startTime": "2018-11-15T10:56:19.382Z",
  "stopTime": "2018-11-15T11:56:19.382Z",
  "timeliness": "scheduled",
  "tombstoneReason": null,
  "updatedAt": "2020-02-20T10:56:19.382Z",
  "uuid": "38092c00-161d-4ca2-a29d-628cf8e960f6",
  "version": "123",
  "volatile": true,
}
`;

exports[`/api/files/:uuid request succeeds on model file 1`] = `
{
  "checksum": "055bcd9deae26851992c3da6352844fb9443203c48ae4f4ad8f1aa50ef2ab26f",
  "createdAt": "2020-02-20T10:52:59.073Z",
  "downloadUrl": "http://localhost:3000/api/download/product/b5d1d5af-3667-41bc-b952-e684f627d91c/20141205_mace-head_ecmwf.nc",
  "dvasId": null,
  "dvasUpdatedAt": null,
  "errorLevel": null,
  "filename": "20141205_mace-head_ecmwf.nc",
  "format": "NetCDF3",
  "legacy": false,
  "measurementDate": "2020-12-05",
  "model": {
    "humanReadableName": "ECMWF forecast",
    "id": "ecmwf",
    "optimumOrder": 0,
  },
  "pid": "",
  "product": {
    "experimental": false,
    "humanReadableName": "Model",
    "id": "model",
    "level": "1b",
  },
  "site": {
    "actrisId": 1337,
    "altitude": 93,
    "country": "Romania",
    "countryCode": "RO",
    "countrySubdivisionCode": null,
    "dvasId": "INO",
    "gaw": null,
    "humanReadableName": "Bucharest",
    "id": "bucharest",
    "latitude": 44.348,
    "longitude": 26.029,
    "type": [
      "cloudnet",
    ],
  },
  "size": "500452",
  "software": [],
  "startTime": null,
  "stopTime": null,
  "timeliness": "scheduled",
  "tombstoneReason": null,
  "updatedAt": "2020-02-20T10:52:59.073Z",
  "uuid": "b5d1d5af-3667-41bc-b952-e684f627d91c",
  "version": "123",
  "volatile": true,
}
`;

exports[`/api/files/:uuid returns list of file versions 1`] = `
[
  {
    "createdAt": "2020-02-20T10:59:58.449Z",
    "uuid": "8bb32746-faf0-4057-9076-ed2e698dcf36",
  },
  {
    "createdAt": "2020-02-20T10:49:58.449Z",
    "uuid": "6cb32746-faf0-4057-9076-ed2e698dcf36",
  },
  {
    "createdAt": "2020-02-20T10:39:58.449Z",
    "uuid": "22b32746-faf0-4057-9076-ed2e698dcc34",
  },
  {
    "createdAt": "2020-02-19T10:59:58.449Z",
    "uuid": "1bb32746-faf0-4057-9076-ed2e698dcf36",
  },
  {
    "createdAt": "2020-02-19T10:59:58.449Z",
    "uuid": "2bb32746-faf0-4057-9076-ed2e698dcf36",
  },
]
`;

exports[`/api/files/:uuid returns list of file versions with PID and checksum 1`] = `
[
  {
    "checksum": "64d86b26f642a0befdcd7088ff38caab00ea3d95933f4ccc430179b4a29b74d3",
    "createdAt": "2020-02-20T10:59:58.449Z",
    "pid": "",
    "uuid": "8bb32746-faf0-4057-9076-ed2e698dcf36",
  },
  {
    "checksum": "43d86b26f642a0befdcd7088ff38caab00ea3d95933f4ccc430179b4a29b74d3",
    "createdAt": "2020-02-20T10:49:58.449Z",
    "pid": "",
    "uuid": "6cb32746-faf0-4057-9076-ed2e698dcf36",
  },
  {
    "checksum": "22d86b26f642a0befdcd7088ff38caab00ea3d95933f4ccc430179b4a29b74d3",
    "createdAt": "2020-02-20T10:39:58.449Z",
    "pid": "http://pidservice.example/pidhandle",
    "uuid": "22b32746-faf0-4057-9076-ed2e698dcc34",
  },
  {
    "checksum": "14d86b26f642a0befdcd7088ff38caab00ea3d95933f4ccc430179b4a29b74d3",
    "createdAt": "2020-02-19T10:59:58.449Z",
    "pid": "",
    "uuid": "1bb32746-faf0-4057-9076-ed2e698dcf36",
  },
  {
    "checksum": "24d86b26f642a0befdcd7088ff38caab00ea3d95933f4ccc430179b4a29b74d3",
    "createdAt": "2020-02-19T10:59:58.449Z",
    "pid": "",
    "uuid": "2bb32746-faf0-4057-9076-ed2e698dcf36",
  },
]
`;
